# littrs

./: .gitignore  Cargo.toml  FEATURES.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml  update-wasm.yml
crates/litter/: Cargo.toml
crates/litter-macros/: Cargo.toml
crates/litter-macros/src/: lib.rs
crates/litter-wasm/: Cargo.toml
crates/litter-wasm/src/: lib.rs
crates/litter/src/: builtins.rs  error.rs  eval.rs  lib.rs  sandbox.rs  tool.rs  value.rs  wasm_sandbox.rs
crates/litter/tests/: sandbox_tests.rs  tool_macro_tests.rs  wasm_sandbox_tests.rs
crates/littrs/: Cargo.toml
crates/littrs-macros/: Cargo.toml
crates/littrs-macros/src/: lib.rs
crates/littrs-python/: Cargo.toml  README.md  pyproject.toml
crates/littrs-python/python/littrs/: __init__.py
crates/littrs-python/src/: lib.rs
crates/littrs-wasm/: Cargo.toml
crates/littrs-wasm/src/: lib.rs
crates/littrs/src/: builtins.rs  bytecode.rs  compiler.rs  diagnostic.rs  error.rs  eval.rs  lib.rs  methods.rs  modules.rs  operators.rs  sandbox.rs  slice.rs  tool.rs  value.rs  vm.rs  wasm_error.rs  wasm_sandbox.rs
crates/littrs/tests/: sandbox_tests.rs  tool_macro_tests.rs  wasm_sandbox_tests.rs
crates/littrs/wasm/: sandbox.wasm
