[workspace]
resolver = "2"
members = [
    "crates/littrs",
    "crates/littrs-macros",
    "crates/littrs-wasm",
    "crates/littrs-python",
]

# Exclude special-target crates from default build
# - littrs-wasm requires wasm32-wasip1 target
# - littrs-python is built with maturin
default-members = [
    "crates/littrs",
    "crates/littrs-macros",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/chonkie-inc/littrs"

[workspace.dependencies]
# Internal crates
littrs = { version = "0.5.0", path = "crates/littrs" }
littrs-macros = { version = "0.5.0", path = "crates/littrs-macros" }
littrs-wasm = { version = "0.5.0", path = "crates/littrs-wasm" }

# External dependencies
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", branch = "main" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", branch = "main" }
thiserror = "2"
wasmtime = "40"
wasmtime-wasi = "40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Profile for WASM release builds
[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
