[workspace]
resolver = "2"
members = [
    "crates/littrs",
    "crates/littrs-macros",
    "crates/littrs-wasm",
    "crates/littrs-python",
    "vendor/ruff_text_size",
    "vendor/ruff_source_file",
    "vendor/ruff_python_trivia",
    "vendor/ruff_python_ast",
    "vendor/ruff_python_parser",
]

# Exclude special-target crates from default build
# - littrs-wasm requires wasm32-wasip1 target
# - littrs-python is built with maturin
default-members = [
    "crates/littrs",
    "crates/littrs-macros",
]

[workspace.package]
version = "0.6.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/chonkie-inc/littrs"

[workspace.dependencies]
# Internal crates
littrs = { version = "0.6.1", path = "crates/littrs" }
littrs-macros = { version = "0.6.1", path = "crates/littrs-macros" }
littrs-wasm = { version = "0.6.1", path = "crates/littrs-wasm" }

# Vendored ruff crates (from github.com/astral-sh/ruff, commit 56eb6b62)
ruff_python_parser = { version = "0.6.1", path = "vendor/ruff_python_parser", package = "littrs-ruff-python-parser" }
ruff_python_ast = { version = "0.6.1", path = "vendor/ruff_python_ast", package = "littrs-ruff-python-ast" }
ruff_text_size = { version = "0.6.1", path = "vendor/ruff_text_size", package = "littrs-ruff-text-size" }
thiserror = "2"
wasmtime = "40"
wasmtime-wasi = "40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Profile for WASM release builds
[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
