[package]
name = "litter-wasm"
description = "WASM guest module for Litter sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
litter = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
