[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "littrs"
version = "0.5.2"
description = "A lightweight, embeddable Python sandbox for LLM tool execution"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["sandbox", "security", "python", "interpreter", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/chonkie-inc/littrs"
Repository = "https://github.com/chonkie-inc/littrs"
Issues = "https://github.com/chonkie-inc/littrs/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "littrs.littrs"
python-source = "python"
