[package]
name = "littrs-wasm"
description = "WASM guest module for Littrs sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
littrs = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
