[package]
name = "littrs"
description = "A minimal, secure Python sandbox for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["sandbox", "python", "interpreter", "ai", "agents"]
categories = ["development-tools"]

[dependencies]
rustpython-parser.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
littrs-macros = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1"
littrs-macros.workspace = true

[features]
default = []
serde = ["dep:serde"]
macros = ["dep:littrs-macros"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "serde", "dep:serde_json"]
