[package]
name = "littrs"
description = "A lightweight, embeddable Python sandbox for LLM tool execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["sandbox", "python", "interpreter", "ai", "agents"]
categories = ["development-tools"]

[dependencies]
ruff_python_parser.workspace = true
ruff_python_ast.workspace = true
ruff_text_size.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json.workspace = true
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
littrs-macros = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1"
littrs-macros.workspace = true

[features]
default = []
serde = ["dep:serde"]
macros = ["dep:littrs-macros"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "serde"]
